@@ -134,7 +134,7 @@ function media_upload_nextgen_form($errors) {
 			if(is_array($gallerylist)) {
 				foreach($gallerylist as $gallery) {
 					$selected = ($gallery->gid == $galleryID )?	' selected="selected"' : "";
-					echo '<option value="'.$gallery->gid.'"'.$selected.' >'.$gallery->name.' | '.$gallery->title.'</option>'."\n";
+					echo '<option value="'.$gallery->gid.'"'.$selected.' >'.$gallery->title.'</option>'."\n";
 				}
 			}
 			?>
@@ -172,7 +172,7 @@ function media_upload_nextgen_form($errors) {
 			  <div class='filename'></div>
 			  <a class='toggle describe-toggle-on' href='#'><?php attribute_escape( _e('Show',"nggallery") ); ?></a>
 			  <a class='toggle describe-toggle-off' href='#'><?php attribute_escape( _e('Hide',"nggallery") );?></a>
-			  <div class='filename new'><?php echo ( empty($picture->alttext) ) ? $picture->filename : stripslashes($picture->alttext); ?></div>
+			  <div class='filename new'><?php echo ( empty($picture->alttext) ) ? wp_html_excerpt($picture->filename,75): stripslashes( wp_html_excerpt($picture->alttext,75) ); ?></div>
 			  <table class='slidetoggle describe startclosed'><tbody>
 				  <tr>
 					<td rowspan='4'><img class='thumbnail' alt='<?php echo attribute_escape( $picture->alttext ); ?>' src='<?php echo attribute_escape( $picture->thumbPath ); ?>'/></td>
