@@ -397,6 +397,7 @@ function nggShowAlbum($albumID, $mode = "extend", $sortorder = "") {
  		$out .= nggCreateAlbum( $gallery_array, $mode, $albumID );
 	
 	$out = apply_filters('ngg_show_album_content', $out, intval($albumID));
+
 	return $out;
 }
 
@@ -409,12 +410,14 @@ function nggCreateAlbum( $galleriesID, $mode = "extend", $albumID = 0) {
 	$ngg_options = nggallery::get_option('ngg_options');
 	$sortorder = $galleriesID;
 	$galleries = array();
+	// if sombod didn't enter any mode , take the extend version
+	$mode = ( empty($mode) ) ? "extend" : $mode ;
 	
 	// get the galleries information 	
  	foreach ($galleriesID as $i => $value)
    		$galleriesID[$i] = addslashes($value);
  	$unsort_galleries = $wpdb->get_results('SELECT * FROM '.$wpdb->nggallery.' WHERE gid IN (\''.implode('\',\'', $galleriesID).'\')', OBJECT_K);
-	//TODO: Check this, problem exist wehn previewpic = 0 
+	//TODO: Check this, problem exist when previewpic = 0 
 	//$galleries = $wpdb->get_results('SELECT t.*, tt.* FROM '.$wpdb->nggallery.' AS t INNER JOIN '.$wpdb->nggpictures.' AS tt ON t.previewpic = tt.pid WHERE t.gid IN (\''.implode('\',\'', $galleriesID).'\')', OBJECT_K);
 
 	// get the counter values 	
